# universal-mail--automation

./: .dockerignore  .gitignore  AGENTS.md  ATLAS.md  CLAUDE.md  DEPLOY.md  Dockerfile  GEMINI.md  README.md  cli.py  configure_smart_mailboxes.py  create_smart_mailboxes.scpt  ecosystem.yaml  gmail_imap_sweep.py  gmail_labeler.py  gmail_labeler_legacy.py  imap_rules.py  llms.txt  pyproject.toml  requirements-api.txt  seed.yaml  wrangler.toml
.claude/plans/: 2026-06-07-closeout-mail-automation.md  (+1 more)
.well-known/: agent.json
acp/: README.md  router.py
api/: README.md  app.py  auth.py  billing.py  metering.py  schemas.py  store.py  triage_runtime.py  well_known.py
audit/: .gitignore  README.md
cloudflare/: worker.mjs
core/: __init__.py  audit.py  config.py  input_validation.py  mail_resolver_receipt.py  models.py  research.py  rules.py  triage.py  unsubscribe.py  voice.py
docs/: cloudflare-share-demo.md
platform/: __init__.py  saas_runner.py
providers/: base.py  gmail.py  imap.py  mailapp.py  outlook.py
tests/: conftest.py  test_acp.py  test_api.py  test_audit.py  test_auth_api.py  test_auto_drain.py  test_billing.py  test_cli.py  test_config.py  test_gmail_labeler_legacy.py  test_imap_archive.py  test_mail_resolver_receipt.py  test_mcp.py  test_models.py  test_protected_enforcement.py  test_receipts.py  test_research.py  test_rules.py  test_saas_runner.py  test_state.py  test_triage.py  test_voice.py  test_web.py
universal_mail_automation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
web/: index.html  ops.html  package.json
(+8 files in other folders)
